# www

./: .gitignore  index.html  proxy.pac
bucket_browser/: Dockerfile  wsgi.py
bucket_browser/templates/: bucket_browser.html
code/: .gitignore  README.md  index.html  robots.txt  subnetting.html
code/html/: dudedns.html  ftp.html  icompare.html  icompare.json  mapsdemo.html  mortgage.html  proxy.pac  quad.html  quiz.html  rest_fun.html  squid.html  squid.old  squid_bottom.html  squid_middle.html  squid_top.html  (+3 more)
code/python/: 418.py  Dockerfile  Makefile  app.py  app.yaml  cgi_test.cgi  database.py  db_example.py  dispatch.yaml  environ.py  fastapi_app.py  financial.py  geoip.py  lambda_function.py  main.py  makelambda.sh  pyproject.toml  quart_app.py  requirements.txt  system_tools.py  webapps.py  wsgi.py
dudedns/: index.html
icompare/: csv2json.py  iPhones.csv  icompare.json
j5/: index.html  posttest.html
myspace/: black.css  threescompany.wmv
primus/: 404.html  albums.htm  articles.htm  audio.html  bastvote.htm  blah.php  boat.htm  boat.html  book.htm  brain.htm  brain.html  chat.htm  cheesvid.htm  claypool.htm  claypool.html  disco.html  enhanced.htm  fasq.htm  formvote.htm  frame.htm  get_table.php  grade.php  graffiti.html  graffiti.php  history.htm  images.html  index.html  irc.htm  lalonde.htm  lalonde.html  links.htm  links.html  list.htm  lyrics.html  main.html  makebar.php  merch.htm  midis.html  mpeg.htm  mysql.php  (+22 more)
teapotme/: Dockerfile  LICENSE  Makefile  README.md  app.yaml  main.py  requirements.txt  wsgi.py
turdmonger/: index.html
(+247 files in other folders)
